tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/shifting-80/proxyless-grpc/to_b_tproxy/_test_context/VirtualService.1112618291.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - b
  http:
  - route:
    - destination:
        host: b
      weight: 80
    - destination:
        host: tproxy
      weight: 20
